--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
+        <h1>Domino Calculators</h1>
+        <h3>Here are some domino calculators you can use to find out how much dominos you need in your projects. There are domino cube, pyramid, and wall calculators. Enjoy!</h2>
     <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/3RW7MCq7hOeqW6arNVCI1FslouWzrU9KmI1Dba07kZA/embed"></iframe>
     </body>
 </html>
